2.0.1
-----
1. Delay creation of Jamendo and Magnatune DBs until required.

2.0.0
-----
 1. Use SQLite database to cache MPD library.
 2. Combine Artists and Albums tabs into a single Library tab. Provide option
    to group library by; Genre, Artist, or Album
 3. When sorting artists and albums, if there is no sort tag then remove any
    periods from the main tag before using it to sort. e.g. A.S.A.P. -> ASAP
 4. Use SQLite for Jamendo and Magnatune libraries.
 5. Rename Online view to Internet.
 6. Place Streams view within Internet.
 7. Place stored playlists and dynamic playlists within Playlists.
 8. Remove option for non-mono sidebar icons.
 9. Always build with Dynamic, Online, and Streams support.
10. If connected to MPD>=0.19 using address 127.0.0.1 or localhost, then pass
    local files as 'file://' URLS.
11. Use regular artist icon for "Various Artists"
12. If MPD does not support 'sticker' command, then inform user that ratings
    cannot be stored.
13. When populating library, check genre list. If this is empty, then do dot
    attempt to populate library. The UPnP database backend will not populate
    MPD's metadata listings (genre, artists, etc), and calling "lsinfo" on
    all UPnP folders is very slow and will lead to duplicate tracks.
14. Add 'Copy To Device' to playqueue.
15. Do not reset current song when shuffling albums, or sorting playqueue.
16. MPD 0.19.2 can handle m3u8, so pass stream URLs of this type straight to
    MPD.
17. Re-add hack to force scrollbars in large combo popups and to restrict their
    height. This should apply to all Linux Gtk-like styles, not just QGtkStyle.
18. Use '#' for track number column title in table view.
19. Allow setting of column alignments in table views.
20. Add 'setCollection' to Cantata's DBUS interface.
21. Add 'Collections' and 'Outputs' menus to system tray menu (Linux and
    Windows builds only)
22. Separate title and track number in search model table view.